# llama-launcher

./: $null  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  TASK.md  package-lock.json  package.json
.github/: release-notes.md
.github/releases/: README.md  v0.3.7.md  v0.4.0.md
.github/workflows/: ci.yml  release.yml
mcps/shadcn-svelte/tools/: bitsUiGetTool.json  shadcnSvelteGetTool.json  shadcnSvelteIconsTool.json  shadcnSvelteListTool.json  shadcnSvelteSearchTool.json
mcps/svelte/tools/: get-documentation.json  list-sections.json  playground-link.json  svelte-autofixer.json
mcps/windows-mcp/tools/: App.json  Click.json  Clipboard.json  FileSystem.json  Move.json  MultiEdit.json  MultiSelect.json  Notification.json  PowerShell.json  Process.json  Registry.json  Scrape.json  Screenshot.json  Scroll.json  Shortcut.json  Snapshot.json  Type.json  Wait.json  WaitFor.json
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: autoconfig.rs  chat.rs  config.rs  data_reset.rs  diagnostics.rs  hardware.rs  hf.rs  lib.rs  main.rs  models.rs  runtime.rs  server.rs
src/lib/: api.ts  i18n.ts  prefs.svelte.ts  profiles.ts  recommended.ts  server.svelte.ts
src/lib/components/: Catalog.svelte  ChatPanel.svelte  Icon.svelte  LocalModels.svelte  Onboarding.svelte  Running.svelte  Settings.svelte
src/lib/styles/: theme.css
src/routes/: +layout.svelte  +page.svelte
